update docs
